test/Fail/Issue4071.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  Resolve instance argument _list-like_7 : {X : Set} → List-like _F_6
  Candidates
    list-like : List-like F
    List-is-list-like : List-like List
    (stuck)

Issue4071.agda:15.5-14: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue4071.agda:15.5-12
  Issue4071.agda:15.13-14
